--- a/about.html
+++ b/about.html
@@ -5,6 +5,6 @@ permalink: /about/
 ---
 <div class="wrapper">
 <ul class="postsList">
-<li><span>my name is liangshilei.</span></li>
+<li><span>my name is liang.</span></li>
 </ul>
 </div>
