--- a/links.html
+++ b/links.html
@@ -5,8 +5,6 @@ permalink: /links/
 ---
 <div class="wrapper">
 <ul class="postsList">
-<li><a href="https://twitter.com/ztpala">Twitter</a></li>
-<li><a href="http://www.flickr.com/photos/ztpala">Flickr</a></li>
-<li><a href="http://azaleasays.com">azalea</a></li>
+To be added...
 </ul>
 </div>
